looping + headless mode

--- a/ScrapingIndoNetwork/Scrapper.ipynb
+++ b/ScrapingIndoNetwork/Scrapper.ipynb
@@ -199,7 +199,9 @@
     "    \n",
     "    linkWa = []\n",
     "    \n",
-    "    driver = webdriver.Chrome('/Users/abdulsalam/Documents/dll/chromedriver')\n",
+    "    options = Options()\n",
+    "    options.headless = True\n",
+    "    driver = webdriver.Chrome('/Users/abdulsalam/Documents/dll/chromedriver', chrome_options=options)\n",
     "    driver.get(url)\n",
     "    try:\n",
     "        driver.find_element_by_class_name('wa-call').click()\n",
@@ -207,6 +209,7 @@
     "        return None\n",
     "   \n",
     "    time.sleep(1)\n",
+    "    \n",
     "    page_source = driver.page_source\n",
     "    soup4 = BeautifulSoup(page_source, 'html.parser').find_all('a', class_='nobor')\n",
     "    \n",
@@ -672,18 +675,111 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### LOOPING ###"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "z = \n",
+    "\n",
+    "for i in range(1, 6):\n",
+    "    linkProv = filterLinkProvince(category[0][z+ i])\n",
+    "    textProv = filterTextProvince(category[0][z+ i])\n",
+    "    \n",
+    "    linkCompany = {}\n",
+    "    \n",
+    "    for x in range(len(textProv)):\n",
+    "        linkCompany[textProv[x]] = getLinkCompany(linkProv[x])\n",
+    "\n",
+    "    for m in textProv:\n",
+    "        for l in linkCompany[m]:\n",
+    "\n",
+    "            print(l)\n",
+    "            \n",
+    "    data_company = []\n",
+    "    phone_wa = []\n",
+    "    phone_temp = []\n",
+    "\n",
+    "    for j in textProv:\n",
+    "        for k in linkCompany[j]:\n",
+    "            company = simple_get(k)\n",
+    "            try:\n",
+    "                soup = BeautifulSoup(company, 'html.parser')\n",
+    "            except Exception:\n",
+    "                try:\n",
+    "                    soup = BeautifulSoup(company, 'html.parser')\n",
+    "                except Exception:\n",
+    "                    try:\n",
+    "                        soup = BeautifulSoup(company, 'html.parser')\n",
+    "                    except Exception:\n",
+    "                        print('error')\n",
+    "                        continue\n",
+    "            companyName = soup.find('h1', class_='sc-company__title').text\n",
+    "            membershipLvl = soup.find('span', class_='sc-company__lb').text\n",
+    "            companyCtgry = category[1][z + i]\n",
+    "            companyDesc = soup.find('div', class_='rc-company__description').text\n",
+    "            companyAddr = soup.find('address').text\n",
+    "            companyCity = soup.find('span', class_='text-capitalize').text\n",
+    "            companyProv = j\n",
+    "            linkWA = getLinkWhatsapp(k)\n",
+    "            if linkWA is not None:\n",
+    "                for wa in linkWA:\n",
+    "                    phone_temp.append(getPhoneWA(wa))\n",
+    "                if len(phone_temp) == 1:\n",
+    "                    phone_temp.append('None')\n",
+    "                    phone_temp.append('None')\n",
+    "                elif len(phone_temp) == 2:\n",
+    "                    phone_temp.append('None')\n",
+    "                elif len(phone_temp) == 4:\n",
+    "                    del phone_temp[3]\n",
+    "                elif len(phone_temp) == 5:\n",
+    "                    del phone_temp[3]\n",
+    "                    del phone_temp[4]\n",
+    "                elif len(phone_temp) == 6:\n",
+    "                    del phone_temp[3]\n",
+    "                    del phone_temp[4]\n",
+    "                    del phone_temp[5]\n",
+    "            else:\n",
+    "                phone_temp.append('None')\n",
+    "                phone_temp.append('None')\n",
+    "                phone_temp.append('None')\n",
+    "\n",
+    "            data_company.append({\n",
+    "                'Name':companyName,\n",
+    "                'Membership':membershipLvl,\n",
+    "                'Category':companyCtgry,\n",
+    "                'Description':companyDesc,\n",
+    "                'Address':companyAddr,\n",
+    "                'City':companyCity,\n",
+    "                'Province':companyProv\n",
+    "            })\n",
+    "\n",
+    "            phone_wa.append(phone_temp)\n",
+    "\n",
+    "            print(companyName)\n",
+    "            print(companyCity)\n",
+    "            print(companyProv)\n",
+    "            print(phone_temp)\n",
+    "            print('')\n",
+    "            phone_temp = []\n",
+    "    \n",
+    "    tempData = data_company\n",
+    "    for index in range(len(data_company)):\n",
+    "        for number in range(len(phone_wa[index])):\n",
+    "            tempData[index]['telp' + str(number+1)] = phone_wa[index][number]\n",
+    "\n",
+    "    \n",
+    "    df = pd.DataFrame(tempData)\n",
+    "\n",
+    "    df.to_csv('data_company' + str(z + i + 1) + '.csv', index=False, encoding=\"utf-8\")"
+   ]
   },
   {
    "cell_type": "code",
